--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,9 @@ Metrics/BlockLength:
 Metrics/LineLength:
   Max: 120
 
+Metrics/MethodLength:
+  Max: 20
+
 Style/Documentation:
   Enabled: false
 
